fix: harden core runtime storage and concurrency
P0 fixes:
- Remove FakeChromaClient from production paths (ImportManager, ImportApiHandler, GSimulatorApplication)
- writeEmbeddings throws KnowledgeStoreException on SQL failure
- PlayerActionService uses ReentrantReadWriteLock
- ContextSessionStore/SessionMessageStore use synchronized locks for JSONL writes
- DataManager uses ReentrantReadWriteLock for reload/read safety

P1 fixes:
- OkHttpClient lifecycle: close() added to OpenAiLlmClient, ExternalEmbeddingModel; ApplicationContext.shutdown() releases them
- SQLiteKnowledgeStore upsert dedup: collection+source_type+source_uri+content_hash
- RateLimiter uses synchronized for thread safety
- FTS5 escaping enhanced + FTS MATCH error fallback to LIKE
- Tool call parse failure upgraded from log.debug to log.warn

New tests: 33 additional tests (482 total, 0 fail)

Co-Authored-By: Claude <noreply@anthropic.com>